# GCPFastapiTemplate

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
